Better separation of the code between different versions of the protocol
that way it will be eaiser and safer to remove a version when it will
be deprecated, reducing the surface for bug in the latest version.
Signed-off-by: Fabio Di Fabio <fabio.difabio@consensys.net>